fixed align issue

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,3 +1,7 @@
+body{
+  background-color: #336600;
+}
+
 .middle{
   display: block;
   text-align: center;
@@ -6,4 +10,9 @@
 
 .words{
   font-family: Arial;
+}
+
+.background-black{
+  background-color: black;
+  color: white;
 }
