--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,6 @@
+body {
+  background-color: #336600; }
+
 .middle {
   display: block;
   text-align: center;
@@ -5,5 +8,9 @@
 
 .words {
   font-family: Arial; }
+
+.background-black {
+  background-color: black;
+  color: white; }
 
 /*# sourceMappingURL=styles.css.map */
